--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 						Goliienko Oleg
 					</div>
 					<div class="col-md-7 discription">
-						Here presented my last works.<br /> I did everything by my own.<br /> Feel free to contact me and ask any questions
+						Here presented my last works.<br /> I did everything by my own.<br /> Feel free to contact me and ask any questions<br />
+						<a href="mailto:goliienko.oleg@gmail.com">goliienko.oleg@gmail.com</a>
 					</div>
 					
 				</div>
