--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</div>
 					<div class="col-md-8">
 						<div class="site_link">
-							<a href="http://festivalbridges.com" target="blank">Web Site</a>
+							<a href="https://r0h.github.io/festbridges" target="blank">Web Site</a>
 						</div>
 						<div class="site_info">
 							Adaptive WordPress template<br />
