--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 						<div class="site_info">
 							Adaptive WordPress template<br />
 							Four languages site<br /><br />
+							2017<br /><br />
 							<span class="block_name">Used:</span> HTML, CSS, Bootstrap, JavaScript(jQuery), CMS WordPress, php
 						</div>
 					</div>
@@ -81,6 +82,7 @@
 						</div>
 						<div class="site_info">
 							Adaptive WordPress template<br /><br />
+							2017<br /><br />
 							<span class="block_name">Used:</span> HTML, CSS, Bootstrap, JavaScript(jQuery), CMS WordPress, php
 						</div>
 					</div>
@@ -102,7 +104,25 @@
 						</div>
 						<div class="site_info">
 							Adaptive page with carousels and Ajax<br /><br />
+							2017<br /><br />
 							<span class="block_name">Used:</span> HTML, CSS, Bootstrap, JavaScript(jQuery)
+						</div>
+					</div>
+				</div>
+				<div class="col-md-12 portfolio_item">
+					<div class="col-md-4">						
+						<a class="gallery pc" href="img/festinpol/img.png">
+							<img src="img/festinpol/img.png" alt="front">
+						</a>
+					</div>
+					<div class="col-md-8">
+						<div class="site_link">
+							<a href="http://festivalsinpoland.ru/" target="blank">Web Site</a>
+						</div>
+						<div class="site_info">
+							WordPress template<br /><br />
+							2014<br /><br />
+							<span class="block_name">Used:</span> HTML, CSS, JavaScript(jQuery), CMS WordPress, php
 						</div>
 					</div>
 				</div>
