--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 										<h3><a href="https://r0h.github.io/festbridges" target="_blank">The Festival Bridges</a></h3>
 										<p>Custom WordPress template on four languages. Adaptive design for all types of devices.</p>
 										<p>Year 2017</p>
-										<img src="img/festbridges.png" alt="The Festival Bridges" />
+										<img src="img/festbridges.jpg" alt="The Festival Bridges" />
 									</div>
 								</div>
 							</div>
@@ -286,7 +286,7 @@
 										<h3><a href="http://eurofest.pl" target="_blank">Harmony</a></h3>
 										<p>Custom WordPress template. Adaptive design for all types of devices.</p>
 										<p>Year 2017</p>
-										<img src="img/eurofest.png" alt="Harmony" />
+										<img src="img/eurofest.jpg" alt="Harmony" />
 									</div>
 								</div>
 							</div>
@@ -302,7 +302,7 @@
 										<h3><a href="http://theforms.pro" target="_blank">The Forms</a></h3>
 										<p>Original design simple page with resume and portfolio of Dental technical</p>
 										<p>Year 2017</p>
-										<img src="img/pronin.png" alt="Daniil Pronin" />
+										<img src="img/pronin.jpg" alt="Daniil Pronin" />
 									</div>
 								</div>
 							</div>
@@ -318,7 +318,7 @@
 										<h3><a href="http://festivalsinpoland.ru" target="_blank">Festivals in Poland</a></h3>
 										<p>WordPress template</p>
 										<p>Year 2014</p>
-										<img src="img/festionpol.png" alt="Festivals in Poland" />
+										<img src="img/festionpol.jpg" alt="Festivals in Poland" />
 									</div>
 								</div>
 							</div>
