--- a/index.html
+++ b/index.html
@@ -113,78 +113,96 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 col-sm-12 exp_item">
-						<div class="col-md-5 col-sm-5 col-xs-12 animation_2">
-							<div class="date">10.2016 - today</div>
+						<div class="col-md-5 col-sm-5 col-xs-12">
+							<div class="date animation_2">10.2016 - today</div>
 						</div>
-						<div class="col-md-7 col-sm-7 col-xs-12 animation_3">
-							<span class="bold">Web development</span>, Freelance
-						</div>
-					</div>
-					<div class="col-md-12 col-sm-12 exp_item">
-						<div class="col-md-5 col-sm-5 col-xs-12 animation_2">
-							<div class="date">2008 - today</div>
-						</div>
-						<div class="col-md-7 col-sm-7 col-xs-12 animation_3">
-							Ukraine, Kremenchug, International Charitable Fund
-							"Harmony" - <span class="bold">the system administrator</span>, organization of social and cultural programs for children and youth.
+						<div class="col-md-7 col-sm-7 col-xs-12">
+							<div class="animation_3">
+								<span class="bold">Web development</span>, Freelance
+							</div>
 						</div>
 					</div>
 					<div class="col-md-12 col-sm-12 exp_item">
-						<div class="col-md-5 col-sm-5 col-xs-12 animation_2">
-							<div class="date">06.2014 - today</div>
+						<div class="col-md-5 col-sm-5 col-xs-12">
+							<div class="date animation_2">2008 - today</div>
 						</div>
-						<div class="col-md-7 col-sm-7 col-xs-12 animation_3">
-							Poland, Swidnica, „Fundacja Inicjatywa” - <span class="bold">organization of children festivals</span>. Distance <span class="bold">site service</span>.
-						</div>
-					</div>
-					<div class="col-md-12 col-sm-12 exp_item">
-						<div class="col-md-5 col-sm-5 col-xs-12 animation_2">
-							<div class="date">07.2016 - 08.2016</div>
-						</div>
-						<div class="col-md-7 col-sm-7 col-xs-12 animation_3">
-							Poland, Kostrzyn, "OLSA Poland" - <span class="bold">quality control</span> of products
+						<div class="col-md-7 col-sm-7 col-xs-12">
+							<div class="animation_3">
+								Ukraine, Kremenchug, International Charitable Fund
+								"Harmony" - <span class="bold">the system administrator</span>, organization of social and cultural programs for children and youth.
+							</div>
 						</div>
 					</div>
 					<div class="col-md-12 col-sm-12 exp_item">
-						<div class="col-md-5 col-sm-5 col-xs-12 animation_2">
-							<div class="date">03.2015</div>
+						<div class="col-md-5 col-sm-5 col-xs-12">
+							<div class="date animation_2">06.2014 - today</div>
 						</div>
-						<div class="col-md-7 col-sm-7 col-xs-12 animation_3">
-							Poland, Pulawy - <span class="bold">organization</span> of children's football championship
-						</div>
-					</div>
-					<div class="col-md-12 col-sm-12 exp_item">
-						<div class="col-md-5 col-sm-5 col-xs-12 animation_2">
-							<div class="date">2011 - 2015</div>
-						</div>
-						<div class="col-md-7 col-sm-7 col-xs-12 animation_3">
-							A professional <span class="bold">online poker player</span>
+						<div class="col-md-7 col-sm-7 col-xs-12">
+							<div class="animation_3">
+								Poland, Swidnica, „Fundacja Inicjatywa” - <span class="bold">organization of children festivals</span>. Distance <span class="bold">site service</span>.
+							</div>
 						</div>
 					</div>
 					<div class="col-md-12 col-sm-12 exp_item">
-						<div class="col-md-5 col-sm-5 col-xs-12 animation_2">
-							<div class="date">03.2010 - 09.2010</div>
+						<div class="col-md-5 col-sm-5 col-xs-12">
+							<div class="date animation_2">07.2016 - 08.2016</div>
 						</div>
-						<div class="col-md-7 col-sm-7 col-xs-12 animation_3">
-							USA, Maryland, Ocean City, "Seacrets" - <span class="bold">security service</span> (Face
-							Control, maintenance of order). An employee of the <span class="bold">restaurant industry</span>.
-						</div>
-					</div>
-					<div class="col-md-12 col-sm-12 exp_item">
-						<div class="col-md-5 col-sm-5 col-xs-12 animation_2">
-							<div class="date">09.2009 - 2012</div>
-						</div>
-						<div class="col-md-7 col-sm-7 col-xs-12 animation_3">
-							The company "MIKMA" <span class="bold">Remote Support web pages</span>
+						<div class="col-md-7 col-sm-7 col-xs-12">
+							<div class="animation_3">
+								Poland, Kostrzyn, "OLSA Poland" - <span class="bold">quality control</span> of products
+							</div>
 						</div>
 					</div>
 					<div class="col-md-12 col-sm-12 exp_item">
-						<div class="col-md-5 col-sm-5 col-xs-12 animation_2">
-							<div class="date">06.2009 - 09.2009</div>
+						<div class="col-md-5 col-sm-5 col-xs-12">
+							<div class="date animation_2">03.2015</div>
 						</div>
-						<div class="col-md-7 col-sm-7 col-xs-12 animation_3">
-							Poland, Swidnica, company "MIKMA" - IT specialist
-							(<span class="bold"> Web design, maintenance</span> of office equipment)
+						<div class="col-md-7 col-sm-7 col-xs-12">
+							<div class="animation_3">
+								Poland, Pulawy - <span class="bold">organization</span> of children's football championship
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 col-sm-12 exp_item">
+						<div class="col-md-5 col-sm-5 col-xs-12">
+							<div class="date animation_2">2011 - 2015</div>
+						</div>
+						<div class="col-md-7 col-sm-7 col-xs-12">
+							<div class="animation_3">
+								A professional <span class="bold">online poker player</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 col-sm-12 exp_item">
+						<div class="col-md-5 col-sm-5 col-xs-12">
+							<div class="date animation_2">03.2010 - 09.2010</div>
+						</div>
+						<div class="col-md-7 col-sm-7 col-xs-12">
+							<div class="animation_3">
+								USA, Maryland, Ocean City, "Seacrets" - <span class="bold">security service</span> (Face
+								Control, maintenance of order). An employee of the <span class="bold">restaurant industry</span>.
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 col-sm-12 exp_item">
+						<div class="col-md-5 col-sm-5 col-xs-12">
+							<div class="date animation_2">09.2009 - 2012</div>
+						</div>
+						<div class="col-md-7 col-sm-7 col-xs-12">
+							<div class="animation_3">
+								The company "MIKMA" <span class="bold">Remote Support web pages</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 col-sm-12 exp_item">
+						<div class="col-md-5 col-sm-5 col-xs-12">
+							<div class="date animation_2">06.2009 - 09.2009</div>
+						</div>
+						<div class="col-md-7 col-sm-7 col-xs-12">
+							<div class="animation_3">
+								Poland, Swidnica, company "MIKMA" - IT specialist
+								(<span class="bold"> Web design, maintenance</span> of office equipment)
+							</div>
 						</div>
 					</div>
 				</div>
@@ -269,67 +287,75 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-md-3 portfolio_item">
-							<img src="img/thumbs/festbridges_min.png" alt="The Festival Bridges" />
-							<div class="portfolio_hover">
-								<h3>The Festival Bridges</h3>
-								<p>Custom WP template</p>
-								<a href="#" class="popup">Show</a>
-							</div>
-							<div class="hidden">
-								<div class="portfolio_description">
-									<h3><a href="https://r0h.github.io/festbridges" target="_blank">The Festival Bridges</a></h3>
-									<p>Custom WordPress template on four languages. Adaptive design for all types of devices.</p>
-									<p>Year 2017</p>
-									<img src="img/festbridges.png" alt="The Festival Bridges" />
+						<div class="col-md-3">
+							<div class="portfolio_item">
+								<img src="img/thumbs/festbridges_min.png" alt="The Festival Bridges" />
+								<div class="portfolio_hover">
+									<h3>The Festival Bridges</h3>
+									<p>Custom WP template</p>
+									<a href="#" class="popup">Show</a>
+								</div>
+								<div class="hidden">
+									<div class="portfolio_description">
+										<h3><a href="https://r0h.github.io/festbridges" target="_blank">The Festival Bridges</a></h3>
+										<p>Custom WordPress template on four languages. Adaptive design for all types of devices.</p>
+										<p>Year 2017</p>
+										<img src="img/festbridges.png" alt="The Festival Bridges" />
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-3 portfolio_item">
-							<img src="img/thumbs/eurofest_min.jpg" alt="eurofest.pl" />
-							<div class="portfolio_hover">
-								<h3>Harmony</h3>
-								<p>Custom WP template</p>
-								<a href="#" class="popup">Show</a>
-							</div>
-							<div class="hidden">
-								<div class="portfolio_description">
-									<h3><a href="http://eurofest.pl" target="_blank">Harmony</a></h3>
-									<p>Custom WordPress template. Adaptive design for all types of devices.</p>
-									<p>Year 2017</p>
-									<img src="img/eurofest.png" alt="Harmony" />
+						<div class="col-md-3">
+							<div class="portfolio_item">
+								<img src="img/thumbs/eurofest_min.jpg" alt="eurofest.pl" />
+								<div class="portfolio_hover">
+									<h3>Harmony</h3>
+									<p>Custom WP template</p>
+									<a href="#" class="popup">Show</a>
+								</div>
+								<div class="hidden">
+									<div class="portfolio_description">
+										<h3><a href="http://eurofest.pl" target="_blank">Harmony</a></h3>
+										<p>Custom WordPress template. Adaptive design for all types of devices.</p>
+										<p>Year 2017</p>
+										<img src="img/eurofest.png" alt="Harmony" />
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-3 portfolio_item">
-							<img src="img/thumbs/pronin_min.jpg" alt="eurofest.pl" />
-							<div class="portfolio_hover">
-								<h3>The Forms</h3>
-								<p>Carousels</p>
-								<a href="#" class="popup">Show</a>
-							</div>
-							<div class="hidden">
-								<div class="portfolio_description">
-									<h3><a href="http://theforms.pro" target="_blank">The Forms</a></h3>
-									<p>Original design simple page with resume and portfolio of Dental technical</p>
-									<p>Year 2017</p>
-									<img src="img/pronin.png" alt="Daniil Pronin" />
+						<div class="col-md-3">
+							<div class="portfolio_item">
+								<img src="img/thumbs/pronin_min.jpg" alt="eurofest.pl" />
+								<div class="portfolio_hover">
+									<h3>The Forms</h3>
+									<p>Carousels</p>
+									<a href="#" class="popup">Show</a>
+								</div>
+								<div class="hidden">
+									<div class="portfolio_description">
+										<h3><a href="http://theforms.pro" target="_blank">The Forms</a></h3>
+										<p>Original design simple page with resume and portfolio of Dental technical</p>
+										<p>Year 2017</p>
+										<img src="img/pronin.png" alt="Daniil Pronin" />
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-3 portfolio_item">
-							<img src="img/thumbs/festinpol_min.jpg" alt="Festivals in Poland" />
-							<div class="portfolio_hover">
-								<h3>Festivals in Poland</h3>
-								<p>Custom WP template</p>
-								<a href="#" class="popup">Show</a>
-							</div>
-							<div class="hidden">
-								<div class="portfolio_description">
-									<h3><a href="http://festivalsinpoland.ru" target="_blank">Festivals in Poland</a></h3>
-									<p>WordPress template</p>
-									<p>Year 2014</p>
-									<img src="img/festionpol.png" alt="Festivals in Poland" />
+						<div class="col-md-3">
+							<div class="portfolio_item">
+								<img src="img/thumbs/festinpol_min.jpg" alt="Festivals in Poland" />
+								<div class="portfolio_hover">
+									<h3>Festivals in Poland</h3>
+									<p>Custom WP template</p>
+									<a href="#" class="popup">Show</a>
+								</div>
+								<div class="hidden">
+									<div class="portfolio_description">
+										<h3><a href="http://festivalsinpoland.ru" target="_blank">Festivals in Poland</a></h3>
+										<p>WordPress template</p>
+										<p>Year 2014</p>
+										<img src="img/festionpol.png" alt="Festivals in Poland" />
+									</div>
 								</div>
 							</div>
 						</div>
