--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 portfolio_block">
 							<div class="portfolio_item">
 								<img src="img/thumbs/festbridges_min.png" alt="The Festival Bridges" />
 								<div class="portfolio_hover">
@@ -305,7 +305,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 portfolio_block">
 							<div class="portfolio_item">
 								<img src="img/thumbs/eurofest_min.jpg" alt="eurofest.pl" />
 								<div class="portfolio_hover">
@@ -323,7 +323,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 portfolio_block">
 							<div class="portfolio_item">
 								<img src="img/thumbs/pronin_min.jpg" alt="eurofest.pl" />
 								<div class="portfolio_hover">
@@ -341,7 +341,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 portfolio_block">
 							<div class="portfolio_item">
 								<img src="img/thumbs/festinpol_min.jpg" alt="Festivals in Poland" />
 								<div class="portfolio_hover">
