--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>r0h Portfolio</title>
+	<title>Portfolio</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="favicon.png" />
+	<link rel="icon" href="favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid.min.css" />
 	<link rel="stylesheet" href="libs/animate/animate.min.css" />
 	<link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css" />
