--- a/festbridges/index.html
+++ b/festbridges/index.html
@@ -46,9 +46,9 @@ img.emoji {
 	padding: 0px 0 !important;
 }
 </style>
-<link rel='stylesheet' id='bootstrap-css'  href='../libs/bootstrap/bootstrap-grid-3.3.1.min.css' type='text/css' media='all' />
+<link rel='stylesheet' id='bootstrap-css'  href='../libs/bootstrap/bootstrap-grid.min.css' type='text/css' media='all' />
 <link rel='stylesheet' id='font-awesome-css'  href='libs/font-awesome-4.2.0/css/font-awesome.min.css' type='text/css' media='all' />
-<link rel='stylesheet' id='fancybox-css'  href='../libs/fancybox/jquery.fancybox.css' type='text/css' media='all' />
+<link rel='stylesheet' id='fancybox-css'  href='libs/fancybox/jquery.fancybox.css' type='text/css' media='all' />
 <link rel='stylesheet' id='animate-css'  href='../libs/animate.css-master/animate.min.css' type='text/css' media='all' />
 <link rel='stylesheet' id='owl-css'  href='../libs/owl-carousel/css/owl.carousel.min.css' type='text/css' media='all' />
 <link rel='stylesheet' id='owl-theme-css'  href='../libs/owl-carousel/css/owl.theme.default.css' type='text/css' media='all' />
