--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/common.css" />
 	<link rel="stylesheet" href="css/media.css" />
+	<noscript><meta http-equiv="refresh" content="0; URL=/index_noscript.html"></noscript>
 </head>
 <body>
 
