--- a/exit/index.html
+++ b/exit/index.html
@@ -48,12 +48,10 @@
 						</span></h1>
 					</div>
 				</div>
-				<div class="col-md-12 col-sm-12 col-xs-12 main_slider">
-					<div class="next" onclick="next()">></div>
-					<div class="prev" onclick="prev()">&lt;</div>
+				<div class="col-md-12 col-sm-12 col-xs-12 main_slider">					
 					<div class="col-md-6 col-sm-12 slider_left">
 						<div class="slide_item">
-							<img src="img/pic1.png" alt="">
+							<img src="img/pic_mini_5.png" alt="">
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-12 hidden-xs slider_right">
@@ -143,7 +141,5 @@
 	</footer>
 
 	<script src="js/common.js"></script>
-	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
-	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
 </html>
