--- a/exit/slider.html
+++ b/exit/slider.html
@@ -20,8 +20,8 @@
 		<div class="slider fade">
 			<img src="img/pic_mini_3.png" alt="">
 		</div>
-		<a class="prev" onclick="plusSlide(-1)">&lt;</a>
-		<a class="next" onclick="plusSlide(1)">></a>
+		<a  class="prev" onclick="plusSlide(-1)">&lang;</a>
+		<a class="next" onclick="plusSlide(1)">&rang;</a>
 	</div>
 	
 
