--- a/kamenolomy/index.html
+++ b/kamenolomy/index.html
@@ -372,13 +372,13 @@
 			var ms=document.createElement("link");ms.rel="stylesheet";
 			ms.href=hf;document.getElementsByTagName("head")[0].appendChild(ms);
 		}
-		loadCSS("https://r0h.github.io/kamenolomy/_fonts.css");				//User Styles: Fonts
-		loadCSS("https://r0h.github.io/kamenolomy/libs/animate/animate.css"); //Load Libs CSS: Animate CSS
-		loadCSS("https://r0h.github.io/kamenolomy/_header.css");              //Header Styles (compress & paste to header after release)
-		loadCSS("https://r0h.github.io/kamenolomy/_main.css");                //User Styles: Main
-		loadCSS("https://r0h.github.io/kamenolomy/_media.css");              //User Styles: Media
-		loadCSS("https://r0h.github.io/kamenolomy/libs/owl-carousel/css/owl.carousel.min.css");//Load Libs CSS: OwlCarousel
-		loadCSS("https://r0h.github.io/kamenolomy/libs/magnific-popup/magnific-popup.css");//Load Libs CSS: Magnific
+		loadCSS("_fonts.css");				//User Styles: Fonts
+		loadCSS("libs/animate/animate.css"); //Load Libs CSS: Animate CSS
+		loadCSS("_header.css");              //Header Styles (compress & paste to header after release)
+		loadCSS("_main.css");                //User Styles: Main
+		loadCSS("_media.css");              //User Styles: Media
+		loadCSS("libs/owl-carousel/css/owl.carousel.min.css");//Load Libs CSS: OwlCarousel
+		loadCSS("libs/magnific-popup/magnific-popup.css");//Load Libs CSS: Magnific
 	</script>
 
 	<!-- Load CSS compiled without Bootstrap & Header styles (after release) -->
