--- a/kamenolomy/index.html
+++ b/kamenolomy/index.html
@@ -372,7 +372,7 @@
 			var ms=document.createElement("link");ms.rel="stylesheet";
 			ms.href=hf;document.getElementsByTagName("head")[0].appendChild(ms);
 		}
-		loadCSS("_fonts.css");				//User Styles: Fonts
+		loadCSS("fonts.css");				//User Styles: Fonts
 		loadCSS("libs/animate/animate.css"); //Load Libs CSS: Animate CSS
 		loadCSS("_header.css");              //Header Styles (compress & paste to header after release)
 		loadCSS("_main.css");                //User Styles: Main
