--- a/kamenolomy/index.html
+++ b/kamenolomy/index.html
@@ -374,9 +374,9 @@
 		}
 		loadCSS("fonts.css");				//User Styles: Fonts
 		loadCSS("libs/animate/animate.css"); //Load Libs CSS: Animate CSS
-		loadCSS("_header.css");              //Header Styles (compress & paste to header after release)
-		loadCSS("_main.css");                //User Styles: Main
-		loadCSS("_media.css");              //User Styles: Media
+		loadCSS("header.css");              //Header Styles (compress & paste to header after release)
+		loadCSS("main.css");                //User Styles: Main
+		loadCSS("media.css");              //User Styles: Media
 		loadCSS("libs/owl-carousel/css/owl.carousel.min.css");//Load Libs CSS: OwlCarousel
 		loadCSS("libs/magnific-popup/magnific-popup.css");//Load Libs CSS: Magnific
 	</script>
