--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-md-3 portfolio_block">
+						<div class="col-md-3 col-xs-6 portfolio_block">
 							<div class="portfolio_item">
 								<img src="img/thumbs/kamenolomy_min.png" alt="Usługi Kamieniarskie" />
 								<div class="portfolio_hover">
@@ -307,7 +307,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3 portfolio_block">
+							<div class="col-md-3 col-xs-6 portfolio_block">
 								<div class="portfolio_item">
 									<img src="img/thumbs/exit_min.png" alt="EXIT Realty Associates" />
 									<div class="portfolio_hover">
@@ -325,7 +325,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3 portfolio_block">
+							<div class="col-md-3 col-xs-6 portfolio_block">
 								<div class="portfolio_item">
 									<img src="img/thumbs/festbridges_min.png" alt="The Festival Bridges" />
 									<div class="portfolio_hover">
@@ -343,7 +343,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3 portfolio_block">
+							<div class="col-md-3 col-xs-6 portfolio_block">
 								<div class="portfolio_item">
 									<img src="img/thumbs/eurofest_min.jpg" alt="eurofest.pl" />
 									<div class="portfolio_hover">
@@ -361,7 +361,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3 portfolio_block">
+							<div class="col-md-3 col-xs-6 portfolio_block">
 								<div class="portfolio_item">
 									<img src="img/thumbs/pronin_min.jpg" alt="eurofest.pl" />
 									<div class="portfolio_hover">
@@ -379,7 +379,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3 portfolio_block">
+							<div class="col-md-3 col-xs-6 portfolio_block">
 								<div class="portfolio_item">
 									<img src="img/thumbs/festinpol_min.jpg" alt="Festivals in Poland" />
 									<div class="portfolio_hover">
