--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<p>My name is Oleg and I love computers and traveling :)</p>
 							<p>I like everything with AI, technologies and robotics engineering. This is future and I want to be a part of it. So I decided to start with web development and learn the JS.</p>
 							<p>Also i like the cosmos theme " before it becomes mainstream ;) ".<br /> "Cosmos: A SpaceTime Odyssey" with Neil deGrasse Tyson my favorite.</p>
-							<p>My favorite book is a "Harry Potter and the Methods of Rationality" it's funny and smart.</p>
+							<p>My favorite book is a "Harry Potter and the Methods of Rationality" by Eliezer Yudkowsky, it's funny and smart.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
