--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="animation_1">
 							<h3>Photo</h3>
 							<div class="person">
-								<a href="img/r0h3.jpg" class="popup_image"><img src="img/r0h3.jpg" alt="r0h"></a>
+								<a href="img/r0h3.jpg" class="popup_image"><img src="img/r0h3_min.jpg" alt="r0h"></a>
 							</div>
 						</div>
 					</div>
